<resources>
    <string name="app_name">MyAnimeReport</string>
    <string name="title_home">Watched</string>
    <string name="title_report">Report</string>
    <string name="title_match">Match</string>
    <string name="title_backlog">To Watch</string>
    <string name="test">Test</string>
    <string name="_10">/10</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_period">Sign up.</string>
    <string name="or">OR</string>
    <string name="log_out">Log Out</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_period">Log in.</string>
    <string name="sign_up">Sign Up</string>
    <string name="entry">Entry</string>
    <string name="title">Title</string>
    <string name="watched">Watched</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="no_results_found">No results found.</string>
    <string name="entry_details">Entry Details</string>
    <string name="add_entry">Add Entry</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="delete_question">Delete?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="anime_details">Anime Details</string>
    <string name="no_data_on_episodes">No data on episodes</string>
    <string name="total_animes_watched">Total Animes Watched</string>
    <string name="animes_watched">Animes Watched</string>
    <string name="average_rating">Average Rating</string>
    <string name="animes_watched_this_year">Animes Watched This Year</string>
    <string name="average_rating_this_year">Average Rating This Year</string>
    <string name="overview">Overview</string>
    <string name="activity">Activity</string>
    <string name="genre">Genre</string>
    <string name="top_5">Top 5</string>
    <string name="genre_preference">Genre Preference</string>
    <string name="genre_breakdown_by_year">Genre Breakdown by Year</string>
    <string name="backlog_item_details">Backlog Item Details</string>
    <string name="no_user_data_click_to_add_an_entry">No user data. Click \'+\' to add an entry!</string>
    <string name="create_an_entry">Add an entry.</string>
    <string name="no_data">No data.</string>
    <string name="accept_a_match">Accept a match.</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_password">Edit Password</string>
    <string name="list_layout">List Layout</string>
    <string name="entry_creation_date">Entry Creation Date</string>
    <string name="anime_title">Anime Title</string>
    <string name="name">Name</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="new_name">New name</string>
    <string name="watch_date">Watch Date</string>
    <string name="delete_all_entries">Delete All Entries</string>
    <string name="delete_all_backlog_items">Delete All Backlog Items</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="delete_to_watch_list">Delete To-Watch List</string>
    <string name="clear_to_watch_list">Clear To-Watch List</string>
    <string name="filter">Filter</string>
    <string name="genre_filter">Genre Filter</string>
    <string name="all">All</string>
    <string name="rewind">Rewind</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="username_or_email">Username or email</string>
    <string name="my_anime_report">My Anime Report</string>
    <string name="email_associated_with_your_account">Email associated with your account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="date_added">Date Added</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="no_recs">No more recommendations.</string>
    <string name="come_back_later">Come back later!</string>
</resources>