<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myanimereport.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.example.myanimereport.fragments.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_match"
        android:name="com.example.myanimereport.fragments.MatchFragment"
        android:label="@string/title_match"
        tools:layout="@layout/fragment_match" />

    <fragment
        android:id="@+id/navigation_backlog"
        android:name="com.example.myanimereport.fragments.BacklogFragment"
        android:label="@string/title_backlog"
        tools:layout="@layout/fragment_backlog" />
</navigation>