<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="100dp"
    android:paddingHorizontal="50dp"
    android:background="@color/dark_gray"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:background="@drawable/white_border_rounded_bg"
        android:layout_marginVertical="10dp"
        android:minHeight="50dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:hint="@string/username_or_email"
        android:textColorHint="@color/light_gray"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsername"
        android:background="@drawable/white_border_rounded_bg"
        android:layout_marginVertical="10dp"
        android:minHeight="50dp"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:hint="@string/password"
        android:textColorHint="@color/light_gray"
        android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
        android:drawableTint="@color/white"
        android:textCursorDrawable="@null" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_alignParentEnd="true"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/theme" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvForgotPassword"
        android:layout_marginVertical="10dp"
        android:minHeight="0dp"
        android:background="@drawable/theme_rounded_bg"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:letterSpacing="0"
        android:onClick="logInOnClick"
        app:backgroundTint="@null" />

    <RelativeLayout
        android:id="@+id/rlOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin">

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/or"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_toStartOf="@id/tvOr"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_toEndOf="@id/tvOr"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlOr"
        android:layout_marginVertical="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_up_period"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/theme"
            android:onClick="signUpOnClick" />
    </LinearLayout>
</RelativeLayout>