<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_border_rounded_bg"
        android:layout_marginHorizontal="20dp"
        android:minHeight="20dp"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:hint="@string/old_password"
        android:textColorHint="@color/light_gray"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_border_rounded_bg"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:minHeight="20dp"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:hint="@string/new_password"
        android:textColorHint="@color/light_gray"
        android:drawableTint="@color/white"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_border_rounded_bg"
        android:layout_marginHorizontal="20dp"
        android:minHeight="20dp"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:hint="@string/confirm_new_password"
        android:textColorHint="@color/light_gray"
        android:drawableTint="@color/white"
        android:textCursorDrawable="@null" />
</LinearLayout>