<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="50dp"
    android:gravity="center_vertical"
    android:background="@color/dark_gray"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:background="@drawable/white_border_rounded_bg"
        android:layout_marginVertical="10dp"
        android:minHeight="50dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:hint="@string/username"
        android:textColorHint="@color/light_gray"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsername"
        android:background="@drawable/white_border_rounded_bg"
        android:layout_marginVertical="10dp"
        android:minHeight="50dp"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:hint="@string/email"
        android:textColorHint="@color/light_gray"
        android:drawableTint="@color/white"
        android:textCursorDrawable="@null" />

    <LinearLayout
        android:id="@+id/llPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border_rounded_bg"
            android:minHeight="50dp"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:hint="@string/password"
            android:textColorHint="@color/light_gray"
            android:textCursorDrawable="@null" />

        <ImageButton
            android:id="@+id/btnVisibility1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-60dp"
            android:src="@drawable/ic_baseline_visibility_off_24"
            android:onClick="togglePasswordVisibility1"
            style="?android:buttonBarButtonStyle"
            app:tint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llPassword"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border_rounded_bg"
            android:minHeight="50dp"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/light_gray"
            android:textCursorDrawable="@null" />

        <ImageButton
            android:id="@+id/btnVisibility2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-60dp"
            android:src="@drawable/ic_baseline_visibility_off_24"
            android:onClick="togglePasswordVisibility2"
            style="?android:buttonBarButtonStyle"
            app:tint="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llConfirmPassword"
        android:layout_marginVertical="10dp"
        android:minHeight="0dp"
        android:background="@drawable/theme_rounded_bg"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:letterSpacing="0"
        android:onClick="signUpOnClick"
        app:backgroundTint="@null" />

    <RelativeLayout
        android:id="@+id/rlOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSignUp">

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/or"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_toStartOf="@id/tvOr"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_toEndOf="@id/tvOr"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlOr"
        android:layout_marginVertical="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/log_in_period"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/theme"
            android:onClick="logInOnClick" />
    </LinearLayout>
</RelativeLayout>